remove bugs: layout shift

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -7,6 +7,8 @@ input, textarea, select {
   padding: 0.75rem 1rem;
 
   font: var(--text);
+  border: 2px solid transparent;
+  outline: 1px solid var(--stroke-default);
 }
 
 label {
@@ -19,7 +21,7 @@ label {
 
 input:focus, select:focus, textarea:focus, input[type="date"]:focus-within {
   outline: .25rem solid var(--surface-secondary);
-  border: .125rem solid var(--stroke-highlight);
+  border-color: var(--stroke-highlight);
   outline-offset: .1px;
 }
 
